--- a/face-recognitionAPI/package.json
+++ b/face-recognitionAPI/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "knex": "^3.1.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "serverless-http": "^3.2.0"
   }
 }
